--- a/README.Rmd
+++ b/README.Rmd
@@ -9,22 +9,14 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+Topic:
+Differences in electric range across various vehicle makes and models
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```{r}
+#load the data
+library(tidyverse)
 
-```{r cars}
-summary(cars)
+electric_vehicle_population_data <- read_csv("Electric_Vehicle_Population_Data.csv")
+head(electric_vehicle_population_data)
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
