--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,10 @@ Differences in electric range across various vehicle makes and models
 
 
 ```{r}
-#load the data
-library(tidyverse)
+electric_vehicle_population_data <- electric_vehicle_population_data %>%
+  mutate(
+    electric_range = replace_na(electric_range, median(electric_range, na.rm = TRUE)),
+    base_msrp = replace_na(base_msrp, median(base_msrp, na.rm = TRUE))
+  )
 
-electric_vehicle_population_data <- read_csv("Electric_Vehicle_Population_Data.csv")
-head(electric_vehicle_population_data)
 ```
