--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,9 @@ Differences in electric range across various vehicle makes and models
 ###cleaning to find median
 electric_vehicle_population_data <- electric_vehicle_population_data %>%
   mutate(
-    electric_range = replace_na(electric_range, median(electric_range, na.rm = TRUE)),
-    base_msrp = replace_na(base_msrp, median(base_msrp, na.rm = TRUE))
+    `Electric Range` = replace_na(`Electric Range`, median(`Electric Range`, na.rm = TRUE)),
+    `Base MSRP` = replace_na(`Base MSRP`, median(`Base MSRP`, na.rm = TRUE))
   )
+
 
 ```
