--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ glimpse(electric_vehicle_population_data)
 dim(electric_vehicle_population_data)
 ```
 Topic:
-Differences in electric range across various vehicle makes,models, and range
+Differences in electric range across various vehicle makes,models, and location
 
 How does electric range differ across vehicle makes?
 How does electric range differ across models within the same make?
@@ -87,6 +87,7 @@ ev_plot |>
 ```
 
 ```{r}
+#How does electric range differ across models within the same make?
 top_makes <- ev_plot |>
   count(Make, sort = TRUE) |>
   slice_head(n = 6) |>
@@ -110,6 +111,7 @@ ev_plot |>
 ```
 
 ```{r}
+#Do average electric ranges differ across rural and urban cities?
 urban_rural_lookup <- tibble(
   City = c("Seattle", "Tacoma", "Spokane", "Bellevue", "Olympia",
            "Orondo", "Orondo", "Orting", "Palouse", "Port Hadlock"),
@@ -164,4 +166,72 @@ ev_plot |>
     y = "Average Electric Range (miles)"
   )
 
+```
+
+
+```{r}
+#Do average electric ranges differ across rural and urban cities?
+ev2 <- electric_vehicle_population_data %>%
+  mutate(EV_Type = case_when(
+    `Electric Vehicle Type` == "Battery Electric Vehicle (BEV)" ~ "BEV",
+    `Electric Vehicle Type` == "Plug-in Hybrid Electric Vehicle (PHEV)" ~ "PHEV",
+    TRUE ~ NA_character_
+  ))
+
+avg_range_by_type <- ev2 %>%
+  filter(!is.na(EV_Type)) %>%
+  group_by(EV_Type) %>%
+  summarise(avg_range = mean(`Electric Range`, na.rm = TRUE))
+
+p1 <- ggplot(avg_range_by_type,
+             aes(x = EV_Type, y = avg_range, fill = EV_Type)) +
+  geom_col() +
+  scale_fill_manual(values = c("BEV" = "steelblue", "PHEV" = "darkorange")) +
+  labs(
+    title = "Average Electric Range: BEVs vs PHEVs",
+    x = "Vehicle Type",
+    y = "Average Electric Range (miles)"
+  ) +
+  theme_minimal()
+
+top10_BEV <- ev2 %>%
+  filter(EV_Type == "BEV") %>%
+  count(Make, sort = TRUE) %>%
+  slice_head(n = 10) %>%
+  pull(Make)
+
+top10_PHEV <- ev2 %>%
+  filter(EV_Type == "PHEV") %>%
+  count(Make, sort = TRUE) %>%
+  slice_head(n = 10) %>%
+  pull(Make)
+
+range_top20 <- ev2 %>%
+  filter(
+    (EV_Type == "BEV" & Make %in% top10_BEV) |
+    (EV_Type == "PHEV" & Make %in% top10_PHEV)
+  ) %>%
+  group_by(Make, EV_Type) %>%
+  summarise(avg_range = mean(`Electric Range`, na.rm = TRUE)) %>%
+  ungroup()
+
+unique_levels <- unique(c(top10_BEV, top10_PHEV))
+
+range_top20$Make <- factor(range_top20$Make, levels = unique_levels)
+
+p2 <- ggplot(range_top20,
+             aes(x = Make, y = avg_range, fill = EV_Type)) +
+  geom_col(position = "dodge") +
+  coord_flip() +
+  labs(
+    title = "Top 10 BEV vs Top 10 PHEV Makes — Average Electric Range",
+    x = "Vehicle Make",
+    y = "Average Electric Range (miles)",
+    fill = "EV Type"
+  ) +
+  scale_fill_manual(values = c("BEV" = "steelblue", "PHEV" = "darkorange")) +
+  theme_minimal()
+
+p1
+p2
 ```
