--- a/README.Rmd
+++ b/README.Rmd
@@ -19,15 +19,10 @@ head(electric_vehicle_population_data)
 glimpse(electric_vehicle_population_data)
 dim(electric_vehicle_population_data)
 ```
-Topic:
-Differences in electric range across various vehicle makes,models, and location
 
-How does electric range differ across vehicle makes?
-How does electric range differ across models within the same make?
-Do newer models within the same make tend to have higher range?
-How does electric range differ between BEVs and PHEVs across makes?
-Do average electric ranges differ across rural and urban cities?
+Topic: Differences in electric range across various vehicle makes,models, and location
 
+How does electric range differ across vehicle makes? How does electric range differ across models within the same make? Do newer models within the same make tend to have higher range? How does electric range differ between BEVs and PHEVs across makes? Do average electric ranges differ across rural and urban cities?
 
 ```{r}
 ###cleaning to find median
@@ -68,7 +63,6 @@ ev_plot <- electric_vehicle_population_data |>
   filter(!is.na(`Electric Range`), `Electric Range` > 0)
 
 ```
-
 
 ```{r}
 #How does electric range differ across vehicle makes?
@@ -197,6 +191,7 @@ electric_vehicle_population_data %>%
   ) +
   theme_minimal()
 ```
+
 ```{r}
 #Do newer models within the same make tend to have higher range?
 
@@ -217,7 +212,6 @@ ev_plot |>
   )
 
 ```
-
 
 ```{r}
 #How does electric range differ between BEVs and PHEVs across makes?
