--- a/README.Rmd
+++ b/README.Rmd
@@ -20,10 +20,14 @@ glimpse(electric_vehicle_population_data)
 dim(electric_vehicle_population_data)
 ```
 
-Topic: Differences in electric range across various vehicle makes,models, and location
+Topic: What are the differences in electric range across various vehicle makes, models, and location, along with other potential factors?
+
 
 How does electric range differ across vehicle makes?
-How does electric range differ across models within the same make? Do newer models within the same make tend to have higher range? How does electric range differ between BEVs and PHEVs across makes? Do average electric ranges differ across rural and urban cities?
+How does electric range differ across models within the same make? 
+Do newer models within the same make tend to have higher range? 
+How does electric range differ between BEVs and PHEVs across makes? 
+Do average electric ranges differ across rural and urban cities?
 
 ```{r}
 ###cleaning to find median
