--- a/README.Rmd
+++ b/README.Rmd
@@ -19,15 +19,28 @@ head(electric_vehicle_population_data)
 glimpse(electric_vehicle_population_data)
 dim(electric_vehicle_population_data)
 ```
+##Introduction
 
-Topic: What are the differences in electric range across various vehicle makes, models, and location, along with other potential factors?
+Data is from https://catalog.data.gov/dataset/electric-vehicle-population-data 
+
+This dataset shows the Battery Electric Vehicles (BEVs) and Plug-in Hybrid Electric Vehicles (PHEVs) that are currently registered through Washington State Department of Licensing (DOL). The vehicles can come from areas outside of the state.
+Electric Range is the estimated distance a vehicle can travel on a single full charge powered solely by its battery before needing to be recharged (we measured by miles)
+BEVs run purely on electricity, PHEVs are plug in hybrid electric vehicles that use both gas and electricity
 
 
-How does electric range differ across vehicle makes?
-How does electric range differ across models within the same make? 
-Do newer models within the same make tend to have higher range? 
-How does electric range differ between BEVs and PHEVs across makes? 
-Do average electric ranges differ across rural and urban cities?
+## Topic: What are the differences in electric range across various vehicle makes, models, and location, along with other potential factors?
+
+We want to know how these factors affect the electric range of a vehicle
+Our data set includes these variables that we used to solve this question:
+Make, Model, Electric Range, Electric Vehicle Type (BEV or PHEV), Model Year, City, County, Base MSRP
+
+## Research Questions
+
+* How does electric range differ across vehicle makes?
+* How does electric range differ across models within the same make? 
+* Do newer models within the same make tend to have higher range? 
+* How does electric range differ between BEVs and PHEVs across makes? 
+* Do average electric ranges differ across rural and urban cities?
 
 ```{r}
 ###cleaning to find median
@@ -60,6 +73,15 @@ glimpse(electric_vehicle_population_data)
 
 dim(electric_vehicle_population_data)
 ```
+## How we Cleaned the Data/First Steps
+
+1. Removed missing values in key numeric fields- Replaced missing Electric Range and Base MSRP values with the median (most were either 0 or NA)
+
+2.Fixed data types – Converted year, postal code, and categorical fields so calculations and grouping work correctly.
+
+3.Removed potential duplicate vehicles – Used VIN + Model Year so that each EV appears only once in the dataset.
+
+4.Filtered invalid ranges – Kept only vehicles with electric range greater than 0 to focus on real EV performance data.
 
 ```{r}
 library(tidyverse)
@@ -196,6 +218,13 @@ electric_vehicle_population_data %>%
   ) +
   theme_minimal()
 ```
+1Rural cities show a higher average electric range compared to urban cities in our subset.
+-Rural areas averaged about 49 miles, while urban areas averaged around 34 miles.
+1This may suggest that drivers in rural areas tend to own EVs with longer ranges, possibly due to greater travel distances or fewer charging stations 
+while people in more urban areas may not need to 
+travel as far to get to their destination and have 
+access to more charging stations.
+
 
 ```{r}
 #Do newer models within the same make tend to have higher range?
@@ -284,3 +313,8 @@ p2 <- ggplot(range_top20,
 p1
 p2
 ```
+-Battery Electric Vehicles (BEVs) have a noticeably higher average range than Plug-in Hybrid Electric Vehicles (PHEVs).
+-In our dataset, BEVs average around 38 miles of electric range, while PHEVs average closer to 30 miles.
+-This aligns with expectations: BEVs rely fully on electric power, so manufacturers maximize their battery capacity, while PHEVs use smaller batteries since they 
+also have gasoline engines.
+
